fix: make improved use of sidecar header for k8s
Fixes #735

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -2387,7 +2387,8 @@ badge {
     text-overflow: ellipsis;
     white-space: nowrap;
     font-weight: 600;
-
+}
+badge:not(.version) {
     /* in tandem with the ::first-letter rule immediately below, this gives us DEPLOYED -> Deployed */
     text-transform: lowercase;
     display: inline-block; /* <-- the trick requires block or inline-block */
