fix: user should be able to select text in sidecar header
this also refactors some of the repl-focus that had been in cli.ts into repl-focus.ts

Fixes #741

--- a/packages/app/web/css/left-tab-stripe.css
+++ b/packages/app/web/css/left-tab-stripe.css
@@ -169,7 +169,10 @@ body.os-darwin .left-tab-stripe {
     direction: rtl;
 }
 
-.sidecar-header, .sidecar-bottom-stripe {
+.sidecar-header span {
+    -webkit-app-region: no-drag;
+}
+.sidecar-header div, .sidecar-bottom-stripe {
     -webkit-app-region: drag;
 }
 sidecar .sidecar-header-name-content {
