--- a/plugins/plugin-tutorials/web/css/tutorials.css
+++ b/plugins/plugin-tutorials/web/css/tutorials.css
@@ -1,3 +1,7 @@
+body.subwindow #tutorialPane .tutorial-header {
+    padding-top: 1em;
+}
+
 body.tutorial-in-progress.tutorial-is-fullscreen tab {
     flex: 0 0 0%;
 }
