--- a/plugins/plugin-core-support/web/css/about.css
+++ b/plugins/plugin-core-support/web/css/about.css
@@ -1,50 +1,66 @@
-body {
-    font-family: var(--font-sans-serif);
-    background: var(--color-ui-01);
-    color: var(--color-text-01);
+body:not(.subwindow) sidecar .about-window.padding-content {
+    /* for "subwindows", i.e. windows launched from the command line, use the default block, so that the content scrolls */
+    display: flex;
 }
-body[kui-theme="Light"] {
-    background: var(--color-text-01);
-    color: var(--color-ui-01);
-}
-.title {
-    font-size: 1.75rem;
-    width: 100%;
-    text-align: center;
-    cursor: initial;
-    font-weight: normal;
-}
-.copyright, .versions {
+
+.about-window .versions {
     color: var(--color-text-02);
 }
-body[kui-theme="Light"] .copyright, body[kui-theme="Light"] .versions {
-    color: var(--color-ui-05);
-}
-.title:hover {
-    cursor: pointer;
-}
-.title, .description, .versions, .copyright {
-    -webkit-app-region: no-drag;
-    user-select: initial; /* allow users to select version */
-    font-weight: normal;
-}
-.description {
-    margin: 2em;
+
+.about-window-long-description {
     text-align: justify;
 }
-.logo {
-    margin: 1em;
+
+.about-window .logo {
+    display: flex;
+    align-items: center;
 }
-#app-icon {
+.about-window .logo img {
+    float: left;
+    margin-right: 1em;
     transition: all .8s ease-in-out;
 }
-#app-icon:hover {
+.about-window .logo img:hover {
     filter: brightness(1.1);
 }
-/* spin animation */
-/*@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
-@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }*/
-@keyframes spin { 0% { transform: rotate(0deg); filter: hue-rotate(-40deg); }
-                  100% { transform:rotate(360deg); filter: hue-rotate(0deg); }
-                }
-@keyframes spinny { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+.about-window .page-content {
+    display: flex;
+    flex-direction: column;
+}
+.about-window-top-content {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.about-window-inside-content {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    max-width: 40em;
+}
+
+.about-window-top-content .logo, .about-window-bottom-content, .about-window-inside-content {
+    margin: 1em;
+}
+
+/* the middle content icon "stacks" */
+.about-window-icon-stack {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.about-window .about-window-inside-content a {
+    font-size: 5em;
+    color: var(--color-base0C);
+}
+
+.about-window-bottom-content {
+    display: flex;
+    justify-content: center;
+}
+.about-window-bottom-content .log-lines {
+    width: auto;
+}
