fix(packages/app): improve text contrast for README.md rendering
Fixes #819

--- a/packages/app/web/css/ui.css
+++ b/packages/app/web/css/ui.css
@@ -1189,8 +1189,9 @@ pre, code {
     font-family: var(--font-monospace);
 }
 code.fancy-code, code.fancy-code.hljs {
-    background: var(--color-ui-01) !important;
+    background: var(--color-base00) !important;
     border: 1px solid var(--color-ui-04);
+    color: var(--color-base05);
 }
 .no-wrap {
     white-space: nowrap;
