fix: repl should use outer scrolling when in popup mode
Fixes #870

--- a/packages/app/templates/index.html
+++ b/packages/app/templates/index.html
@@ -204,12 +204,23 @@
             <span class='maximize-button-label'><div class='graphical-icon' data-balloon='Expand to full width' data-balloon-length="medium" data-balloon-pos="up-right"><i class='far fa-window-maximize'></i></div></span>
             <span class='unmaximize-button-label'><div class='graphical-icon' data-balloon='Restore split screen' data-balloon-length="medium" data-balloon-pos="up-right"><i class='fas fa-columns'></i></div></span>
           </div>
-          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button'> <!-- close button -->
+
+          <!-- close button -->
+          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-close toggle-sidecar-button'>
             <div class='graphical-icon'
                  data-balloon="Expose the command line" data-balloon-length="long" data-balloon-pos="up-right">
               <i class='fas fa-angle-double-right'></i>
             </div>
           </div>
+
+          <!-- Quit/Done button -->
+          <div class='sidecar-bottom-stripe-button sidecar-bottom-stripe-quit'>
+            <div class="graphical-icon"
+                 data-balloon='Close this popup' data-balloon-length="medium" data-balloon-pos="up-right">
+              <i class="fas fa-sign-out-alt"></i>
+            </div>
+          </div>
+
         </div>
 
       </sidecar>
